deliver function is working, will forward email to default email box

--- a/views/index.haml
+++ b/views/index.haml
@@ -3,7 +3,6 @@
   %head
     %title MailCatcher
     %link{:rel => "stylesheet", :href => "/stylesheets/application.css"}
-    %link{:href => "/favicon.ico", :rel => "shortcut icon" }
     %script{:src => "/javascripts/modernizr.js"}
     %script{:src => "/javascripts/jquery.js"}
     %script{:src => "/javascripts/xslt-3.2.js"}
@@ -60,4 +59,7 @@
             %li.action.download
               %a.button{:href => '#'}
                 %span Download
+            %li.action.deliver
+              %a.button{:href => '#'}
+                %span Deliver
       %iframe.body
